Enhances wrestler actions & sorts combo box items (#28)
* feat: Add unique IDs to action menu items and implement E2E tests for bump and injury management

* feat: Add unique ID to create injury button and update E2E test for InjuryDialog visibility

* feat: Add unique IDs to CreateInjuryDialog components and update E2E tests for injury management

* feat: Sort items in ComboBoxes for improved user experience

* feat: Add navigation back to show list in FullShowLifecycleE2ETest

* feat: Refactor show loading logic to use refreshSegmentsGrid for improved performance and clarity

* feat: Update element presence check to assert specific number of non-empty cells in FullShowLifecycleE2ETest

* feat: Ensure unique participants are selected in MockSegmentNarrationService

* Fix: Flaky E2E tests in FullShowLifecycleE2ETest

Addresses multiple flakiness issues in FullShowLifecycleE2ETest:
- Ensures unique participants in mock segments to prevent validation errors during segment editing.
- Streamlines navigation and improves notification waiting after approving segments to avoid timeouts.
- Updates wait conditions for grid elements to be more robust against UI rendering timing issues.

These changes improve the reliability and stability of the E2E test suite.

* feat: Improve segments grid visibility handling and add no segments message